src/sa_web/static/css/default.css
/* ... */
.place-header {
  margin-bottom: 1em;
}
.place-header a {
  text-decoration: none;
}

.place-items .place-item {
  margin-top: 20px;
  margin-bottom: 20px;
}
.place-items ul {
  margin: 0;
}
.place-items .place-label {
  font-weight: bold;
}
.place-items .place-value {
  word-break: break-word;
}
.place-items .multi-select-response {
  padding: 0;
}

.place-submission-details {
  display: block;
  padding-left: 3.75em;
}

.point-submitter .avatar {
  width: 3.25em;
  height: 3.25em;
  float: left;
  margin-left: -3.75em;
}

.response-date {
  display: block;
  text-transform: uppercase;
  color: #888;
  font-size: 0.75em;
}
.response-date a {
  color: #888;
}
.response-date a:hover {
  color: #00aaff;
}

.survey-count {
  font-size: 0.75em;
  text-transform: uppercase;
  display: block;
}

.survey {
  position: relative;
}

.survey-header {
  border-bottom: 1px solid #a8a8a8;
  padding-bottom: 0.75em;
  margin-bottom: 1em;
  font-size: 1.25em;
}

a.reply-link {
  float: right;
  position: absolute;
  top: 0;
  right: 0;
}

.response {
  position: relative;
  padding-bottom: 2.625em;
  margin-bottom: 1em;
}

.response-header {
  padding-left: 3.75em;
  margin: 0 0 0 1em;
  position: absolute;
  bottom: 0;
  left: 0;
}

.response-submitter .avatar {
  width: 3em;
  height: 3em;
  float: left;
  margin-left: -3.75em;
}

.response-body {
  margin: 0 0 1em;
  padding: 1em;
  border-top: 1px solid #a8a8a8;
  border-right: 1px solid #c8c8c8;
  border-bottom: 0;
  border-left: 1px solid #c8c8c8;
  background: #eee;
  border-radius: 1em;
  position: relative;
}
.response-body:after {
  content: "";
  height: 0;
  width: 0;
  border: 1em solid transparent;
  border-top-color: #eee;
  position: absolute;
  top: 100%;
  left: 1.5em;
}

.response-label-comment {
  display: none;
}

.response-value-comment {
  margin-bottom: 0.5em;
}

article.response footer {
  text-align: right;
}

.survey-reply-link {
  color: #999;
  background: #eee;
  padding: 0.5em 0.75em;
  text-decoration: none;
  font-weight: bold;
}
.survey-reply-link:hover {
  background: #607890;
  color: #fff;
}

.submit-btn {
  float: left;
  margin: 0 0.75em 0 0;
}

form .signed-in-as {
  float: left;
  white-space: nowrap;
  padding-top: 0.125em;
  line-height: 1.5;
}
form .signed-in-as .avatar {
  height: 1.5em;
  width: auto;
  position: relative;
  top: 0.5em;
}
form .signed-in-as a {
  font-weight: bold;
  font-size: 0.875em;
  text-transform: uppercase;
}

.or-sign-in {
  display: block;
  margin-top: 0.5em;
}

a.auth-inline {
  display: inline;
  font-size: 0.875em;
  font-weight: bold;
  text-decoration: none;
  padding: 0.25em 0.5em;
}

/* place detail view story bar */
.place-story-bar {
  background-color: #EEEEEE;
  padding: 8px;
  border-radius: 3px;
  margin-top: 10px;
  margin-bottom: 20px;
  font-family: FontAwesome;
  overflow: hidden;
}
.place-story-bar h1 {
  line-height: 1em;
}
.place-story-bar .story-tagline {
  width: 100%;
  padding-left: 10px;
  padding-right: 10px;
  font-family: "Roboto", sans-serif;
  margin-bottom: 0;
}

/* place form geolocation and instructions bar */
.drag-marker-instructions {
  position: relative;
  background-color: lightyellow;
}
.drag-marker-instructions .btn-geolocate {
  font-size: 0.85em;
  width: 140px;
  padding: 5px;
  position: relative;
}
.drag-marker-instructions .btn-geolocate img {
  position: absolute;
  left: 2px;
  top: 6px;
}
.drag-marker-instructions .drag-text {
  margin-bottom: 0;
  padding-left: 15px;
}
.drag-marker-instructions #geolocating-msg {
  color: #888888;
}

#side-bar {
  display: none;
  overflow: auto;
  letter-spacing: 1px;
  background-color: rgba(255, 255, 255, 0.5);
  display: block;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
#side-bar p {
  color: #F25218;
  font-family: "Roboto", sans-serif;
  text-shadow: 1px -1px 1px rgba(0, 0, 0, 0.5);
  font-size: 1.4em;
  margin: 0;
  letter-spacing: 1px;
  text-transform: uppercase;
}
#side-bar hr {
  margin: 0.5em 0;
  border: none;
}

/*---- leaflet side bar overrides ----*/
.sidebar-header {
  margin: -10px -10px 0;
}
.sidebar-header .sidebar-close {
  z-index: 1;
}
.sidebar-header .sidebar-close i {
  margin-right: 30px;
  background: #0074d9;
  border-radius: 50%;
  padding: 6px 10px 5px 6px;
}

#ticker {
  background: url(images/lightpaperfibers.png);
  z-index: 30;
  display: none;
}
#ticker p {
  padding-left: 1em;
}

.activity-enabled #ticker {
  display: block;
}

ul.recent-points {
  list-style: none;
  margin: 0;
  padding: 0;
}

.recent-points li {
  position: relative;
}
.recent-points a {
  text-decoration: none;
  float: left;
  border-top: 1px solid #888;
  border-bottom: 1px solid #666;
  padding: 0.5em 0.5em 0.5em 3em;
  width: 100%;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
.recent-points li:first-child a {
  border-top: 0;
  padding-top: 0.75em;
}
.recent-points .avatar {
  width: 2em;
  height: 2em;
  float: left;
  margin-left: -2.5em;
}

/* #master-legend {
    overflow: visible;
    padding-left: unset;
    padding-right: unset;
    padding-top: 10px;

    //display: none;
    .unstyled-list {}
} */
.layer-type-list {
  font-size: 1.4em;
  font-weight: normal;
  letter-spacing: 1px;
}

.layer-type-grouping-list {
  margin-left: 10px;
}
.layer-type-grouping-list label {
  font-size: 0.5em;
}

.layer-type-list li {
  position: relative;
}
.layer-type-list img {
  height: 1.75em;
  width: auto;
  vertical-align: middle;
}
/* ... */

